# video_metrics

./: README.md
video_metrics/: CMakeLists.txt  main.c  video_metrics.1  video_metrics.c
video_metrics.xcodeproj/: project.pbxproj
video_metrics.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
video_metrics.xcodeproj/xcuserdata/alberto.xcuserdatad/xcschemes/: video_metrics.xcscheme  xcschememanagement.plist
